# 2022-aoc

./: Cargo.toml  README.md
.github/: score.ase
day-02/src/: lib.rs
puzzles/day-01/src/: lib.rs
puzzles/day-03/src/: lib.rs
puzzles/day-04/src/: lib.rs
puzzles/day-05/: Cargo.toml
puzzles/day-05/src/: lib.rs  stack.rs
src/: macros.rs  main.rs
