[package]
name = "myaoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day-01 = { path = "puzzles/day-01" }
day-02 = { path = "puzzles/day-02" }
day-03 = { path = "puzzles/day-03" }
day-04 = { path = "puzzles/day-04" }